// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App component > renders hello world 1`] = `
<div>
  <div>
    <h1>
      Hello World!
    </h1>
  </div>
  <button
    type="button"
  >
    Test Button
  </button>
</div>
`;

exports[`App component > renders magnificent monkeys 1`] = `
<div>
  <button
    type="button"
  >
    Click Me
  </button>
  <h1>
    Magnificent Monkeys
  </h1>
</div>
`;
